Closed Bug 324414 Opened 20 years ago Closed 20 years ago

caret blinking not themed

Categories

(Core :: Widget: Gtk, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: chpe, Unassigned)

Details

Attachments

(2 files)

Steps to reproduce: 0) In GNOME control centre's Keyboard applet, uncheck "Blink cursor", or change the cursor blinking time 1) Start a gecko application (firefox, epiphany, etc.) Result: Cursor in text fields still blinks, resp. blinks at a different rate than the configured one.
This patch exposes a bug in the caret drawing: when blinking is disabled, the caret doesn't initially show when you click into firefox' URL bar.
The problem with nonshowing cursor with diabled blink might be bug 322720.
Comment on attachment 209352 [details] [diff] [review] look up cursor blink settings in GtkSettings + printf("blink %d blink-time %d\n", blink, blink_time); lose this.
Attachment #209352 - Flags: superreview+
Attachment #209352 - Flags: review+
Attached patch updated patchSplinter Review
Sorry about the accidentally left-over debug printf :)
(In reply to comment #5) > go ahead and check in I can't, don't have cvs write access.
Chpe, I can check the patch in for you, shall I do this?
(In reply to comment #7) > Chpe, I can check the patch in for you, shall I do this? Yes, please :-)
Checking in widget/src/gtk2/nsLookAndFeel.cpp; /cvsroot/mozilla/widget/src/gtk2/nsLookAndFeel.cpp,v <-- nsLookAndFeel.cpp new revision: 1.26; previous revision: 1.25 done
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
this is C++, you don't have to define all your variables at the start of the block. imo you also shouldn't, because it makes it harder to know the type of the variable (where it is used) and makes it harder to see whether it was already initialized.
(In reply to comment #10) > this is C++, you don't have to define all your variables at the start of the > block. imo you also shouldn't, because it makes it harder to know the type of > the variable (where it is used) and makes it harder to see whether it was > already initialized. You're right, but I oriented myself on the file's style, which is like this, look e.g. in "case eMetric_SelectTextfieldsOnKeyFocus".
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: