Bug 324414 - caret blinking not themed. Patch by chpe@gnome.org,r+sr=roc